clusters/my-cluster/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-deployment
  template:
    metadata:
      labels:
        app: dummy-deployment
    spec:
      containers:
      - name: dummy-container
        image: hashicorp/http-echo
        args:
        - "-text=Hello from Dummy Server!"
        ports:
        - containerPort: 5678
