clusters/my-cluster/manifests/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-serivce
spec:
  selector:
    app.kubernetes.io/name: nginx-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
