clusters/my-cluster/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
  namespace: default
spec:
  selector:
    app: dummy-deployment
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
