clusters/my-cluster/manifests/dummy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - dummy-service.com
    secretName: dummy-tls
  rules:
    - host: dummy-service.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dummy-service
              port:
                number: 5678

  ingressClassName: nginx
