clusters/my-cluster/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - dummy-service.example.com
    secretName: dummy-tls
  rules:
    - host: dummy-service.example.com
      http:
        paths:
        - backend:
          service:
            name: dummy-service
            port:
              number: 5678
          path: /
          pathType: Prefix

  ingressClassName: nginx
